--- a/package.json
+++ b/package.json
@@ -9,10 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.5.6",
+    "@supabase/auth-helpers-react": "^0.3.1",
+    "@supabase/supabase-js": "^2.10.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "javascript-time-ago": "^2.5.9",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-clickout-handler": "^1.2.1",
+    "react-dom": "18.2.0",
+    "react-spinners": "^0.13.8",
+    "react-time-ago": "^7.2.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
