--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.10.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "framer-motion": "^10.3.1",
     "javascript-time-ago": "^2.5.9",
     "next": "13.2.4",
     "react": "18.2.0",
